# zero-trust-advisor-agent

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
blueprints/rag-agentic/: README.md
blueprints/rag-graph/: README.md
blueprints/rag-hybrid/: README.md
blueprints/rag-multimodal/: README.md
blueprints/rag-naive/: README.md
configs/: dev.yaml  prod.yaml  staging.yaml
docs/: architecture.md  deployment-guide.md
factory/: catalog.yaml  scaffold.sh
infrastructure/docker/: Dockerfile.api
live/_bootstrap/aws/: terragrunt.hcl
live/prod/: terragrunt.hcl
live/staging/: terragrunt.hcl
modules/contracts/: inference-gateway.md  network.md  object-store.md  vectorstore.md
policy/checkov/: .checkov.yml
policy/opa/: deny_public_ingress.rego
scripts/: setup.sh
src/a2a/: handler.py
src/agent/: __init__.py  prompts.py  tools.py  zero_trust_advisor_agent_agent.py
src/agent/orchestrator/: __init__.py  orchestrator.py
src/api/: main.py
src/api/routes/: domain.py  health.py
src/auth/: service.py
src/config/: settings.py
src/connectors/: domain_connectors.py
src/data/: __init__.py  lanes.py
src/gateway/: __init__.py  audit_trail.py  guardrails.py  middleware.py  pii_redactor.py  token_budget.py
src/llm/: __init__.py  router.py
src/llm/providers/: __init__.py  anthropic_provider.py  base.py  google_provider.py  (+1 more)
src/mcp/: server.py
src/memory/: __init__.py  decisions.py  knowledge_graph.py  lexical.py  long_term.py  manager.py  short_term.py
src/models/: schemas.py
src/rag/: pipeline.py
src/tools/: __init__.py  registry.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_agent.py
(+47 files in other folders)
